# hwatchman

./: .gitignore  hwatchman.cabal  shell.nix
benchmarks/: Decode.hs  hwatchman-benchmarks.cabal  perf.txt
record/: batch1.json  batch10.json  batch100.json  batch1000.json  record.rb
src/System/: Watchman.hs
src/System/Watchman/: Cereal.hs
test/System/Watchman/: DecodeSpec.hs
