name:                aeson-benchmarks
version:             0
build-type:          Simple

cabal-version:       >=1.2

executable hwatchman-benchmark-decode
  main-is: Decode.hs
  ghc-options: -Wall -O2 -rtsopts
  build-depends:
    hwatchman,
    base,
    bytestring,
    criterion,
    text,
    cereal,
    aeson
